...
  <string name="ratio_error_invalid_chars" description="The error message for ratio when there is any other character used than 0123456789:.">Please write a ratio that consists of digits separated by colons (e.g. 1:2 or 1:2:3).</string>
  <string name="ratio_error_invalid_format" description="The error message for ratio when the format is invalid. For example, 1:2:3: or 1:2 3:4.">Please enter a valid ratio (e.g. 1:2 or 1:2:3).</string>
  <string name="ratio_error_invalid_colons" description="The error message for ratio when there are colons next to each other.">Your answer has two colons (:) next to each other.</string>
  <string name="ratio_error_invalid_size" description="The error message for ratio when the number of terms is less than the creator has specified in the customization arg.">Number of terms is not equal to the required terms.</string>
  <string name="ratio_error_includes_zero" description="The error message for ratio when there is a 0 term in the ratio.">Ratios cannot have 0 as an element.</string>
  <string name="ratio_error_empty_input" description="The error message for ratio when the answer is empty.">Enter a ratio to continue.</string>
  <string name="text_error_empty_input">Enter text to continue.</string>
  <string name="selection_error_empty_input">Choose an answer to continue.</string>
  <string name="unknown_size">Unknown size</string>
  <string name="size_bytes">%s Bytes</string>
  <string name="size_kb">%s KB</string>
  <string name="size_mb">%s MB</string>
  <string name="size_gb">%s GB</string>
...
